[gd_scene load_steps=13 format=2]

[ext_resource path="res://Scripts/MazeGenerator.gd" type="Script" id=1]
[ext_resource path="res://Scripts/RequestHandler.gd" type="Script" id=2]
[ext_resource path="res://Assets/Instances/Sun.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/Instances/Board.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/Instances/Player.tscn" type="PackedScene" id=5]
[ext_resource path="res://Assets/Instances/MazeWalls.tscn" type="PackedScene" id=6]
[ext_resource path="res://Assets/Instances/Collect.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scripts/SwitchCam.gd" type="Script" id=8]
[ext_resource path="res://Assets/Instances/GameFin.tscn" type="PackedScene" id=9]
[ext_resource path="res://Assets/Music & SoundEffects/renaissance_of_greed.ogg" type="AudioStream" id=10]
[ext_resource path="res://Assets/Instances/EnergyMarker.tscn" type="PackedScene" id=11]
[ext_resource path="res://default_env.tres" type="Environment" id=12]

[node name="Main" type="Spatial"]
script = ExtResource( 1 )

[node name="RequestHandler" type="Node" parent="."]
script = ExtResource( 2 )

[node name="Timer" type="Timer" parent="RequestHandler"]
wait_time = 4.0

[node name="Sun" parent="." instance=ExtResource( 3 )]
transform = Transform( -0.986265, 0.165103, 0.00468058, 0.127689, 0.74418, 0.655661, 0.104768, 0.647253, -0.755041, 5.08078, 23.7508, -18.1864 )

[node name="Board" parent="." instance=ExtResource( 4 )]

[node name="Player" parent="." instance=ExtResource( 5 )]
transform = Transform( -0.707107, 0, -0.707107, 0, 1, 0, 0.707107, 0, -0.707107, -46, 1.5, -46 )

[node name="GridMap" parent="." instance=ExtResource( 6 )]
data = {
"cells": PoolIntArray(  )
}

[node name="PickupsContainer" type="Spatial" parent="."]

[node name="Collect" parent="PickupsContainer" instance=ExtResource( 7 )]
transform = Transform( 0.853553, -0.146447, 0.5, 0.5, 0.5, -0.707107, -0.146447, 0.853553, 0.5, -46, 2, 46 )
particles_position = Vector3( -46, 7, 46 )

[node name="Collect2" parent="PickupsContainer" instance=ExtResource( 7 )]
transform = Transform( 0.853553, -0.146447, 0.5, 0.5, 0.5, -0.707107, -0.146447, 0.853553, 0.5, 46, 2, 46 )
particles_position = Vector3( 46, 7, 46 )

[node name="Collect3" parent="PickupsContainer" instance=ExtResource( 7 )]
transform = Transform( 0.853553, -0.146447, 0.5, 0.5, 0.5, -0.707107, -0.146447, 0.853553, 0.5, 46, 2, -46 )
particles_position = Vector3( 46, 7, -46 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 78, 0 )
script = ExtResource( 8 )

[node name="SpotLight" type="SpotLight" parent="Camera"]
visible = false
light_energy = 3.0
spot_range = 88.7349

[node name="GameFin" parent="." instance=ExtResource( 9 )]
visible = false

[node name="GameMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
pitch_scale = 0.8
autoplay = true

[node name="EnergyMarker" parent="." instance=ExtResource( 11 )]
visible = false

[node name="world" type="WorldEnvironment" parent="."]
environment = ExtResource( 12 )
[connection signal="maze_complete" from="RequestHandler" to="." method="_on_RequestHandler_maze_complete"]
[connection signal="maze_complete" from="RequestHandler" to="Player" method="_on_RequestHandler_maze_complete"]
[connection signal="maze_complete" from="RequestHandler" to="GameFin" method="_on_RequestHandler_maze_complete"]
[connection signal="switch_cam" from="RequestHandler" to="Camera" method="_on_RequestHandler_switch_cam"]
[connection signal="timeout" from="RequestHandler/Timer" to="RequestHandler" method="_on_Timer_timeout"]
[connection signal="green" from="Player" to="." method="_on_Player_green"]
[connection signal="body_entered" from="PickupsContainer/Collect" to="RequestHandler" method="_on_Collect_body_entered"]
[connection signal="body_entered" from="PickupsContainer/Collect2" to="RequestHandler" method="_on_Collect2_body_entered"]
[connection signal="body_entered" from="PickupsContainer/Collect3" to="RequestHandler" method="_on_Collect3_body_entered"]
[connection signal="home" from="GameFin" to="RequestHandler" method="_on_GameFin_home"]
[connection signal="retry" from="GameFin" to="RequestHandler" method="_on_GameFin_retry"]
